--- a/assets/notebooks/customer-churn-prediction.ipynb
+++ b/assets/notebooks/customer-churn-prediction.ipynb
@@ -22,7 +22,8 @@
    "outputs": [],
    "source": [
     "# Install required Python modules\n",
-    "!pip install sklearn-pandas > /dev/null\n"
+    "!pip install sklearn-pandas > /dev/null\n",
+    "# comment1"
    ]
   },
   {
@@ -1696,7 +1697,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8",
+   "display_name": "Python 3.9",
    "language": "python",
    "name": "python3"
   },
@@ -1710,7 +1711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
